<resources>
    <string name="app_name">阅读器</string>
    <string name="lingdang">铃铛</string>
    <string name="gold">金铃铛</string>
    <string name="silver">银铃铛</string>
    <string name="refresh">刷新</string>
    <string name="downloadstatus_downloading">下载中...</string>
    <string name="indent_buy_tip_title">提示</string>
    <string name="please_input">请输入</string>
    <string name="error_no_net">连接失败，请检查你的网络</string>
    <string name="back">返回</string>
    <string name="toolbar_font_hint_dialog_cancel">以后再说</string>
    <string name="toolbar_font_hint_dialog_confirm">后台下载</string>
    <string name="string_dialog_ok">确定</string>
    <string name="cancel">取消</string>
    <string name="Ensure">"确定"</string>
    <string name="reader_dict">词典</string>
    <string name="companyname">北京当当网信息技术有限公司</string>
    <string name="all_search_result">完整搜索结果>></string>
    <string name="youdao_support">由有道翻译提供</string>
    <string name="dir_loading">载入中</string>
    <string name="directory">目录</string>
    <string name="bookmark">书签</string>
    <string name="booknote">笔记</string>
    <string name="checkdir">字典</string>
    <string name="dmn_share">分享本书</string>
    <string name="dmn_note_export">导出笔记</string>
    <string name="reader_mark_empty_tip">您还没有添加书签</string>
    <string name="reader_mark_empty_tip2">温馨提示:\n阅读时点击右上角\n添加书签</string>
    <string name="reader_copy">复制</string>
    <string name="share">分享</string>
    <string name="draw_line">划线</string>
    <string name="reader_delete">删除</string>
    <string name="read_loading">处理中，请稍候...</string>
    <string name="read_settings_more_fonts">更多字体 ></string>
    <string name="read_set_volume">音量键翻页</string>
    <string name="read_full_mode">全屏模式</string>
    <string name="auto_open_book">自动打开上次阅读</string>
    <string name="chinese_convert">中文繁简互换</string>
    <string name="read_settings_sync">此书与其他设备同步</string>
    <string name="read_turn_off_light">熄屏时间</string>
    <string name="read_turn_off_light_2">2分钟</string>
    <string name="read_turn_off_light_5">5分钟</string>
    <string name="read_turn_off_light_10">10分钟</string>
    <string name="read_turn_off_light_forever">常亮</string>
    <string name="animation_type">翻页动画</string>
    <string name="animation_slide">滑动</string>
    <string name="animation_shift">连续</string>
    <string name="animation_none">无效果</string>
    <string name="pageturn_mode">翻页热区</string>
    <string name="pageturn_default">经典模式</string>
    <string name="pageturn_singleh">单手模式</string>
    <string name="read_settings_deep_night_mode">夜间模式</string>
    <string name="custom_format">自定义版式</string>
    <string name="char_rightarrow">></string>
    <string name="back_to_book_shelf">返回书架</string>
    <string name="read_spacing_gesture_tip">单指上下调整行间距\n单指左右调整页边距</string>
    <string name="reader_text_search_result_nodata">很抱歉，文中没有此关键词\n试试修改您的关键词</string>
    <string name="player_loading">加载中</string>
    <string name="read_toolbar_loading">页码计算中...</string>
    <string name="menu_mode_set">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="reader_toolbar_detail_fontsize">字号</string>
    <string name="reader_toolbar_detail_gap">版式</string>
    <string name="reader_toolbar_detail_bg">背景</string>
    <string name="read_more_settings">其他更多设置</string>
    <string name="toolbar_font_hint">推荐您下载免费字体，以获得更好阅读体验 >></string>
    <string name="read_guide_prev_page">上一页</string>
    <string name="read_guide_next_page">下一页</string>
    <string name="read_guide_center_1">点击中间</string>
    <string name="read_guide_center_2">调出菜单</string>
    <string name="read_guide_center_3">调节字号</string>
    <string name="read_guide_center_4">亮度背景</string>
    <string name="got_it">知道了</string>
    <string name="sync_cloudprogress_continueread">是否同步云端进度继续阅读？</string>
    <string name="sync_mobile_tip">是否使用移动流量同步数据？</string>
    <string name="sync_no_more_tip">不再提示</string>
    <string name="web_browser_menu_open_external">使用外部浏览器打开</string>
    <string name="web_browser_menu_copy_url">复制链接地址</string>
    <string name="web_browser_menu_copy_url_toast">链接已复制到剪贴板</string>
    <string name="no_web_browser">您的手机没有安装外部浏览器</string>
    <string name="error_net_time_out">网络质量太差，请稍后重试</string>
    <string name="error_server">抱歉，服务器故障，请稍后重试</string>
    <string name="bookshelf_no_group">未分组</string>
    <string name="open_book_failed">打开书籍失败，请长按封面删除后重新下载或导入</string>
    <string name="externalmemory_few">剩余存储空间不多,请检查</string>
    <string name="string_mounted_error">存储卡不可用</string>
    <string name="read_comment_last_num">剩余%1$d个字</string>
    <string name="booknote_edit">笔记</string>
    <string name="save">保   存</string>
    <string name="no_dirlist">此书没有找到目录</string>
    <string name="file_not_exist">文件不存在!</string>
    <string name="copyright">Copyright(C) 当当网2004-2016</string>
    <string name="follow_success">追更成功</string>
    <string name="unfollow_success">取消成功</string>
    <string name="menu_comment">评论</string>
    <string name="string_comment_send">发送</string>
    <string name="quote_content">引用部分：</string>
    <string name="read_comment_tip1">内容很不错</string>
    <string name="read_comment_tip2">简单易读</string>
    <string name="read_comment_tip3">超喜欢推荐</string>
    <string name="read_comment_tip4">情节精彩</string>
    <string name="comment_title_tip">标题</string>
    <string name="reader_comment_input_tip">请输入评论的内容</string>
    <string name="string_comment_send_success">已提交审核</string>
    <string name="string_comment_title_tip_null">评论标题不能为空</string>
    <string name="string_comment_content_tip_null">评论内容不能为空</string>
    <string name="time_out_tip">网络质量差，再好的内容也出不来，帮不了你了！</string>
    <string name="string_comment_default_content">#当当读书# 我最近在阅读“%1$s(电子书)”，来和我一起看呀~</string>
    <string name="string_comment_from">来自当当书城</string>
    <string name="shelf_share">分享</string>
    <string name="input_note_content">请输入笔记内容</string>
    <string name="file_saved">图片已保存在：</string>
    <string name="network_exp">请检查你的网络连接</string>
    <string name="online_dict_noresult">在线词典没有结果。</string>
    <string name="online_dict_failed">获取词典结果失败</string>
    <string name="downloaddict_tip">下载词典查看释义</string>
    <string name="read_turn">跳转</string>
    <string name="minute_before">%1$s分钟前</string>
    <string name="hour_before">%1$s小时前</string>
    <string name="reader_text_searching">搜索中：</string>
    <string name="reader_text_search_result_pre">共有</string>
    <string name="reader_text_search_result_post">条结果</string>
    <string name="reader_text_search_result_end">搜索完：</string>
    <string name="reader_text_search_file_start">已搜索至文件起始</string>
    <string name="reader_text_search_file_end">已搜索至文件末尾</string>
    <string name="delete">删除</string>
    <string name="menu_bookmark">书签</string>
    <string name="reader_note_empty_tip">您还没有添加笔记</string>
    <string name="reader_note_empty_tip2">阅读中长按文字即可添加笔记哦~</string>
    <string name="list_loading_tip">为您努力加载中</string>
    <string name="dict_noresult_tip">本地词典没有结果，请尝试在线词典。</string>
    <string name="fileexception_noread">文件异常</string>
    <string name="player_ing">正在播放</string>
    <string name="player_pouse">暂停中</string>
    <string name="player_prepare">准备播放</string>
    <string name="tips_unsupport_convert">因版权保护，该书暂不支持繁简转换</string>
    <string name="read_settings_font_name">字体：</string>
    <string name="parser_file_failed">书籍解析失败，请长按封面删除后重新下载或导入</string>
    <string name="unzip_book_error">电子书解压失败</string>
    <string name="training_over">此计划任务已完成</string>
    <string name="min_fontsize_tip">已到达最小字号 </string>
    <string name="max_fontsize_tip">已到达最大字号 </string>
    <string name="delete_book_in_group">同时删除组内图书</string>
    <string name="buy_success">购买成功</string>
    <string name="tips_buy_success">购买成功,去书架看看</string>
    <string name="add2shelf_success">添加成功</string>
    <string name="sync_cloudprogress_tip">您在当前设备阅读进度是第%1$s页。您云端阅读进度是%2$s阅读到的第%3$s页。</string>
    <string name="toolbar_font_hint_dialog1">在WiFi环境下我们会自动在后台下载</string>
    <string name="toolbar_font_hint_dialog2">后台任务已添加。\n您可以到设置-其他更多设置-字体页面更换您喜欢的字体</string>
    <string name="toolbar_font_hint_dialog3">您可以到设置-其他更多设置-字体页面下手动下载您喜欢的字体</string>
    <string name="set_success">设置成功</string>
    <string name="restore_defaultvalue">已经恢复系统默认值</string>
        <string name="read_spacing_sample">
<![CDATA[<HTML>
		 <HEAD>
		  <TITLE> New Document </TITLE>
		 </HEAD>
		 <body>
			<p>事实上很多创业者的思路其实并没有真正地打到用户的痛点。</p>
			<p>而这个是否需要则恰恰是一个产品是否能够获得广泛成功最为重要的衡量标准，如果仅仅是产品好，却无法让学生和老师有欲望，有能力，有时间去采用，那么产品本身依然还是一个“失败品”</p>
			<p>而这个是否需要则恰恰是一个产品是否能够获得广泛成功最为重要的衡量标准，如果仅仅是产品好，却无法让学生和老师有欲望，有能力，有时间去采用，那么产品本身依然还是一个“失败品”</p>
			<p>孩子们对课程内容不感兴趣，好！做一个游戏，将内容放到其中！老师想要一个参与感更好的课堂呈现，好！做一个课程视频的分享平台！有太多的纸质作业了，好！做一个产品把这些作业都放在云端！这些产品思路并没有错，但是真的是当下学生和老师所需要的么？</p>
		 </body>
		</HTML>]]>
    </string>
    <string name="read_spacing_num_tip">页边距：%1$s \u0020 \u0020 行间距：%2$s</string>
    <string name="read_spacing_minvalue_tip">已经是最小值了</string>
    <string name="read_spacing_maxvalue_tip">已经是最大值了</string>
    <string name="data_error">获取数据错误</string>
    <string name="before_download_info_tip">当前网络为2G/3G，继续下载将会消耗流量，是否继续？</string>
    <string name="before_download_pause">暂停下载</string>
    <string name="before_download_continue">继续下载</string>
    <string name="cancel_download">取消下载</string>
    <string name="downloadstatus_waito">等待</string>
    <string name="downloadstatus_pauseo">暂停</string>
    <string name="read_end">阅读结束</string>
    <string name="reader_fullbook_lastpage_tip">去书吧和小伙伴们一起讨论读书的乐趣吧！</string>
    <string name="reader_firstpage">已到达第一页</string>
    <string name="reader_lastpage">已到达最后一页</string>
    <string name="reader_trybook_lastpage_tip">意犹未尽？立即前往购买，精彩等你来读！</string>
    <string name="reader_trybook_ttsfinish_tip">恭喜您,这本书试读部分已经读完啦, 一键下单，它就是你的了~</string>
    <string name="reader_fullbook_ttsfinish_tip">恭喜您,这本书已经读完啦,快去看看其他的图书吧！</string>
    <string name="try_read_end">试读结束</string>
    <string name="reader_copy_success">文字复制成功</string>
    <string name="read_error_tips">阅读君出现错误了耶~稍候再试试好不好？</string>
    <string name="buy_chapter_dialog_title">章节订单</string>
    <string name="buy_dialog_buy_name">名称：</string>
    <string name="buy_dialog_autobuy">该书不再提示购买信息, 自动购买预存章节</string>
    <string name="buy_dialog_buy_month_not_enough">余额不足，请充值</string>
    <string name="read_force_unshelve_tips">本书已经下架</string>
    <string name="read_media_not_found">查询不到资源或章节！</string>
    <string name="no_net_tip_try_again">网络质量太差，请稍后重试</string>
    <string name="buy_month_dialog_title">包月订单</string>
    <string name="buy_full_dialog_title">全本订单</string>
    <string name="buy_dialog_price">价格：</string>
    <string name="buy_dialog_balance">余额：</string>
    <string name="buy_dialog_buy_month">开通包月</string>
    <string name="buy_dialog_renew_month">续订包月</string>
    <string name="buy_dialog_tips_title">温馨提示：</string>
    <string name="buy_month_dialog_tips1">1、1000金铃铛/30天；</string>
    <string name="buy_month_dialog_tips2">2、有钱任性大促销，包月免费看全场；</string>
    <string name="buy_month_dialog_tips3">3、包月到期自动退订。</string>
    <string name="personal_exchange">充值</string>
    <string name="read_fangzheng_lantinghei_font">方正刊黑</string>
    <string name="read_font_version2_name">方正兰亭黑</string>
    <string name="parser_failed">解析失败</string>
    <string name="decrypt_failed">解密失败</string>
    <string name="reader_training_ttsfinish_tip">恭喜您,今日任务已读完！</string>
    <string name="freefont_downfinish_tip">字体已下载完成</string>
    <string name="delete_tip">确定删除所选作品吗？</string>
    <string name="delete_file">同时删除本地文件</string>
    <string name="file_not_exist_with_error">书籍文件丢失，请长按封面删除后重新下载或导入</string>
    <string name="delete_group_tip">确定删除所选分组吗？</string>
    <string name="delete_group">同时删除组内图书</string>
    <string name="please_inputpassword">请输入密码</string>
    <string name="allow">使用</string>
    <string name="no_allow">不使用</string>
    <string name="request_get_data_error">数据请求失败，请稍后重试</string>
    <string name="try_again">重试</string>
</resources>