<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:gravity="center"       
        android:background="@drawable/round_corner_bg_exit">
        <com.dangdang.zframework.view.DDTextView
            android:id="@+id/tip"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:paddingLeft="10dp"
            android:text="@string/delete_tip"
            android:textSize="16dp"
            android:textColor="#333333"/>
        <CheckBox
            android:id="@+id/check"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginLeft="-2dp"
            android:text="@string/delete_file"
			android:paddingLeft="6dp"
			android:paddingBottom="3dp"
            android:textSize="14dp"
			style="@style/shelf_delete_checkbox"
            android:textColor="#666666"/>
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="38dp"
    	android:orientation="horizontal"
    	android:gravity="center"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:layout_marginBottom="15dp">
    	
    	<com.dangdang.zframework.view.DDButton
        	android:id="@+id/delete_left_btn"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:textSize="15dp"
        	android:text="@string/cancel"
        	android:layout_weight="1"
        	android:layout_marginRight="5dp"
        	android:textColor="#333333"
        	android:gravity="center"
        	android:background="@drawable/dialog_white_btn_selector"/>
    	<com.dangdang.zframework.view.DDButton
        	android:id="@+id/delete_right_btn"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:textSize="15dp"
        	android:text="@string/delete"
        	android:layout_weight="1"
        	android:layout_marginLeft="5dp"
        	android:textColor="#F15456"
        	android:gravity="center"
        	android:background="@drawable/dialog_white_btn_selector"/>
    
	</LinearLayout>
        
    </LinearLayout>