<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dangdang="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/write_note_layout"
    android:background="@color/shelf_menu_bg">
    <include
        android:id="@+id/activity_add_roster_title_ll"
        layout="@layout/common_title"
        />

    <RelativeLayout
        android:layout_below="@+id/activity_add_roster_title_ll"
        android:id="@+id/read_comment_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:visibility="gone"
        android:paddingRight="15dp"
        android:background="#242424">
        
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/read_top_menu_back"
            android:text="@string/back"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:paddingTop="3dip"
            android:paddingBottom="3dip"/>
        
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_center_title"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="18dp"
        	android:textColor="@color/white"
        	android:text="@string/menu_comment"
        	android:gravity="center"
        	android:layout_centerInParent="true"/>
        
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_commentlist_comment"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="16dp"
        	android:textColor="#ffffff"
        	android:text="@string/string_comment_send"
        	android:gravity="center"
        	android:layout_alignParentRight="true"
        	android:layout_centerInParent="true"
        	android:background="@drawable/read_comment_btn"/>
    </RelativeLayout>

    <View 
        android:id="@+id/read_comment_split"
	    android:layout_width="match_parent"
	    android:layout_height="0.5dp"
	    android:layout_below="@+id/read_comment_layout"
	    android:background="@color/list_dmn_devider"/>
   <com.dangdang.zframework.view.DDTextView 
       	android:layout_below="@+id/read_comment_split"
        android:id="@+id/read_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="15dp"
        android:textColor="#696969"
        android:textSize="13dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:lineSpacingExtra="8dp"
        android:text="@string/quote_content"
        android:visibility="gone"
        /> 
            
    <com.dangdang.reader.view.StarRate
		android:id="@+id/read_comment_stars"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
		android:layout_below="@+id/read_note_content"
		dangdang:star_gap="5dip"
		dangdang:path_hollow="@drawable/reader_comment_big_hollow_star"
		dangdang:path_solid="@drawable/reader_comment_big_solid_star" />
    
    <LinearLayout 
        android:id="@+id/read_comment_tip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/read_comment_stars"
        android:orientation="horizontal">
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/read_comment_tip1"
            android:gravity="center"
            android:background="@drawable/text_gray_bg"/>
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/read_comment_tip2"
            android:gravity="center"
			android:background="@drawable/text_gray_bg"/>
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_tip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/read_comment_tip3"
            android:gravity="center"
            android:background="@drawable/text_gray_bg"/>
        <com.dangdang.zframework.view.DDTextView 
            android:id="@+id/read_comment_tip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/read_comment_tip4"
            android:gravity="center"
            android:background="@drawable/text_gray_bg"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/read_comment_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/read_comment_tip_layout">
        
        <com.dangdang.zframework.view.DDTextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/comment_title_tip"/>
        <com.dangdang.zframework.view.DDEditText 
            android:id="@+id/read_comment_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:singleLine="true"
            android:maxLength="25"
            android:background="@drawable/read_note_edittext_shape"/>
        
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/read_comment_input_content"
        android:layout_below="@+id/read_comment_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >
        
        <LinearLayout 
	        android:id="@+id/read_comment_space"
	        android:layout_width="match_parent"
	        android:layout_height="12dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:visibility="gone"
            android:orientation="horizontal"/>
        
        <com.dangdang.zframework.view.DDEditText 
            android:id="@+id/read_comment_input_edit"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="10dp"
            android:hint="@string/reader_comment_input_tip"
            android:gravity="top"
            android:textColor="#643e17"
            android:textSize="15dp"
            android:maxLength="300"
            android:background="@drawable/read_note_edittext_shape"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/read_comment_input_content"
        >
      <com.dangdang.zframework.view.DDCheckBox
           android:id="@+id/check_booknote_share"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
          android:button="@drawable/checkbox_booknote_share"
          android:focusable="false"
           android:textSize="14dp"
           android:text=" 同时分享给好友"
           android:visibility="gone"/>
      
       <com.dangdang.zframework.view.DDTextView 
           android:id="@+id/read_comment_last_num"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_alignParentTop="true"
           android:textSize="14dp"
           android:text="剩余300个字"/>
           
    </RelativeLayout>
        
</RelativeLayout>