<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner_bg_black"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dip" >

        <com.dangdang.reader.view.CYTextView
            xmlns:cy="http://schemas.Android.com/apk/res/com.dangdang.reader.view.CYTextView"
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cy:lineSpacingExtra="0dp"
            cy:textColor="#ff888888"
            cy:cytextSize="16dp"
            cy:typeface="normal" />

        <com.dangdang.zframework.view.DDTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sync_cloudprogress_continueread"
            android:textColor="@color/white"
            android:textSize="@dimen/title_fsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp" >

        <com.dangdang.zframework.view.DDButton
            android:id="@+id/make_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@drawable/exit_left_btn_selector"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <com.dangdang.zframework.view.DDButton
            android:id="@+id/make_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit_right_btn_selector"
            android:text="@string/Ensure"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>